# dream-ida

./: CMakeLists.txt  README.md  RelatedRegisters.cpp  RelatedRegisters.h  plugin.cpp
CodeGeneration/: DecompiledCodeGenerator.cpp  DecompiledCodeGenerator.h
ControlFlowAnalysis/: CompoundConditionalStructurer.cpp  CompoundConditionalStructurer.h  ControlFlowAnalyzer.cpp  ControlFlowAnalyzer.h  GraphStructeringInfo.cpp  GraphStructeringInfo.h  GraphTypes.h  TrivialNodesEliminator.cpp  TrivialNodesEliminator.h
ControlFlowAnalysis/ConditionalsStructuring/: Conditional.cpp  Conditional.h  ConditionalStructurer.cpp  ConditionalStructurer.h  ConditionalTypes.h
ControlFlowAnalysis/DerivedGraphSequence/: DerivedGraphSequenceConstructor.cpp  DerivedGraphSequenceConstructor.h  DerivedSequenceItem.cpp  DerivedSequenceItem.h
ControlFlowAnalysis/GraphTraversal/: DFSOrderVisitor.cpp  DFSOrderVisitor.h  GraphPaths.cpp  GraphPaths.h  GraphTraversal.cpp  GraphTraversal.h  VertexOrdering.cpp  VertexOrdering.h
ControlFlowAnalysis/GraphUtilities/: GraphConverter.cpp  GraphConverter.h
ControlFlowAnalysis/LoopStructuring/: Loop.cpp  Loop.h  LoopStructurer.cpp  LoopStructurer.h  LoopTypes.h
ControlFlowAnalysis/NWayStructuring/: NWayStructurer.cpp  NWayStructurer.h  NWaySwitch.cpp  NWaySwitch.h
DataFlowAnalysis/: DataFlowAnalyzer.cpp  DataFlowAnalyzer.h
DataFlowAnalysis/Algorithms/: ConditionCodePropagation.cpp  ConditionCodePropagation.h  DataFlowAlgorithm.cpp  DataFlowAlgorithm.h  DeadCodeElimination.cpp  DeadCodeElimination.h  ExpressionPropagation.cpp  ExpressionPropagation.h  FunctionArgumentsDetector.cpp  FunctionArgumentsDetector.h  (+2 more)
IntermediateRepresentation/: ControlFlowGraph.cpp  ControlFlowGraph.h  DefinitionResolver.cpp  DefinitionResolver.h  IRHeaders.h  IRSharedPointers.h
Shared/: ColoredStrings.cpp  ColoredStrings.h  ExpressionUtilities.cpp  ExpressionUtilities.h  GraphViewer.cpp  GraphViewer.h  InstructionUtilities.cpp  InstructionUtilities.h  RelatedRegistersMonitor.cpp  RelatedRegistersMonitor.h  houseKeepingUtilities.cpp  houseKeepingUtilities.h
TypeAnalysis/: TypeDecoder.cpp  TypeDecoder.h  TypeMap.cpp  TypeMap.h  TypeSharedPointers.h
(+199 files in other folders)
